attempting to fix blur on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,6 +35,6 @@ body {
 }
 
 .glass {
-	backdrop-filter: blur(15px);
-	--webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(15px) !important;
+	--webkit-backdrop-filter: blur(10px) !important;
 }
